# FastMDUI

./: .gitignore  .sesskey  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
examples/: advanced_demo.py  button_icons_demo.py  demo_app.py
src/fastmdui/: __init__.py  components.py  core.py
tests/: test_components.py
