[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmdui"
dynamic = ["version"]
description = "Material Design UI components for FastHTML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lissan Zahid", email = "lissane2013@duck.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "build>=1.4.0",
    "python-fasthtml>=0.4.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/seekerquest/fastmdui"
Documentation = "https://github.com/seekerquest/fastmdui#readme"
Repository = "https://github.com/seekerquest/fastmdui"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
